# ai_mono

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  YENIDEN_INSA_REHBERI.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: README.md  rate-limiting.md  redis-integration.md  resilience-patterns.md  structured-logging.md
scripts/: entrypoint_mcp_memory.sh  entrypoint_mcp_rag.sh
src/: exception.py
src/agents/: orchestrator.py  service.py
src/agents/tools/: tool_call_extractor.py
src/api/: dependencies.py  main.py  schemas.py
src/api/v1/: router.py
src/cache/: __init__.py  agent_cache.py  redis_provider.py
src/chat/: stream.py
src/config/: settings.py
src/config/providers/: __init__.py  api_config.py  db_config.py  llm_config.py  mcp_config.py
src/core/: models.py
src/core/interfaces/: __init__.py  repositories.py
src/core/prompts/: base.yaml
src/database/rag/: __init__.py  connection.py  queries.py
src/db/: __init__.py
src/ingestion/: chunker.py  pipeline.py
src/llm/: __init__.py  ollama_provider.py  openai_provider.py  provider_factory.py
src/mcp/: client.py  mcp_config.json  memory.py
src/memory/: connection.py  mcp.py
src/rag/: connection.py  mcp.py  queries.py
src/repositories/: __init__.py  document.py  message.py  session.py
src/retrieval/: service.py
src/services/: base_service.py  chat_service.py  session_service.py
src/sql/: schema.sql
src/ui/: chainlit_app.py
src/utils/: __init__.py  logging.py  resilience.py  structured_logging.py
(+23 files in other folders)
